--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-remark-spellcheck",
+  "name": "gatsby-remark-hunspell",
   "description": "Gatsby wrapper for Hunspell spelling checker",
   "author": "Lenvin Gonsalves <lenvingonsalves@gmail.com>",
   "version": "0.0.1",
@@ -37,7 +37,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/98lenvi/gatsby-remark-hunspell.git",
+    "url": "https://github.com/98lenvi/gatsby-remark-hunspell.git"
   },
   "scripts": {
     "test": "jest"
